--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   axiom-web:
     build: 
       context: .
-      dockerfile: Dockerfile.new
+      dockerfile: Dockerfile
     ports:
       - "6000:6000"
     restart: unless-stopped
@@ -12,11 +12,16 @@ services:
       - NODE_ENV=production
       - PORT=6000
       - HOST=0.0.0.0
-    # Sem healthcheck para evitar problemas com EasyPanel
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:6000/"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
     volumes:
-      # Montar a pasta de imagens para facilitar a substituição de imagens (se existir)
-      - ./client/public/images:/app/dist/public/assets/images:ro
+      # Montar a pasta de imagens para facilitar a substituição de imagens
+      - ./client/public/images:/app/dist/images:ro
     
 # Instruções para uso:
-# 1. Desenvolvimento local: docker-compose -f docker-compose.new.yml up
-# 2. Deploy no EasyPanel: use o Dockerfile.new diretamente
+# 1. Desenvolvimento local: docker-compose up
+# 2. Deploy no EasyPanel: use o Dockerfile diretamente
